<resources>
    <string name="app_name">Proyecto</string>
    <string name="Titulo">Bienvenido</string>
    <string name="p1btnadmin">Administrador</string>
    <string name="p1btnregistra">Registrarse</string>
    <string name="padmintitulo">Bienvenido Admin.</string>
    <string name="padminbtn1">Listar</string>
    <string name="padminbtn2">Capturar preguntas</string>
    <string name="pusuariostitulo">Lista de usuarios</string>
    <string name="tvpregunta">Pregunta</string>
    <string name="hpregunta">Capture la pregunta</string>
    <string name="h2">a) </string>
    <string name="h3">b) </string>
    <string name="h4">c) </string>
    <string name="btnguardar">Guardar Preguntas</string>
    <string name="txtsig">Siguiente pregunta</string>
    <string name="rc">Ingrese la letra correcta (minuscula)</string>
    <string name="tvexamen">Examen</string>
    <string name="siguiente">Siguiente</string>
    <string name="anterior">Anterior</string>
    <string name="terminar">Terminar</string>
    <string name="tituloLu">Terminar</string>
    <string name="tituloM">Ubicacion obtenida</string>
    <string name="calificacion">Resultado</string>
    <string name="valide_su_contrase_a_administrador">Contraseña.</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="cantidad_de_preguntas">Cantidad</string>
</resources>